fix: resolve product images collapsing to 0px width on mobile viewports due to flex column centering

--- a/style.css
+++ b/style.css
@@ -1149,6 +1149,10 @@ main {
         text-align: center;
     }
     
+    .product-image-side {
+        width: 100%;
+    }
+    
     .product-content-side {
         padding-left: 0;
         padding-right: 0;
